--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>I'm a Web developer</h1>
     <hr/>
     <h2><a href="./public/movie-ranking.html">Movie Ranking Project</a></h2>
-    <img src="./assets/images/movie-ranking.png" height="200" />
+    <img src="./assets/images/Movie Ranking.png" height="200" />
     <hr/>
     <h2><a href="./public/Birthday.html">Birthday Invite Project</a></h2>
     <img src="./assets/images/Birthday Invite.png" height="200"/>
